# SUPER_JUCE

./: .gitignore  CMakeLists.txt
modules/: CMakeLists.txt
modules/juce_audio_plugin_client/: juce_audio_plugin_client_AAX.cpp
modules/juce_audio_processors/: juce_audio_processors.h
modules/juce_audio_processors/processors/: juce_AudioProcessor.cpp  juce_AudioProcessor.h
modules/juce_gui_basics/native/: ToolbarManager.h  ToolbarManager.mm  juce_NSViewComponentPeer_mac.mm
modules/juce_gui_basics/windows/: juce_ComponentPeer.h  juce_TopLevelWindow.cpp  juce_TopLevelWindow.h
modules/juce_gui_extra/misc/: juce_WebBrowserComponent.cpp
modules/juce_gui_extra/native/javascript/: check_native_interop.js
modules_extra/: CMakeLists.txt
modules_extra/juce_global_hotkeys/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md  juce_global_hotkeys.cpp  juce_global_hotkeys.h  juce_global_hotkeys.mm  juce_module_info
modules_extra/juce_global_hotkeys/examples/: AdvancedAPIStrategy.h  CGEventTapDiagnostic.h  HotKeyDebuggingGuide.h  KeyMappingFix.h  QuickTest.h  SafeKeyTester.h  SequoiaCompatibilityGuide.h  SimpleExample.h  SimpleTestApp.h
modules_extra/juce_global_hotkeys/hotkeys/: juce_GlobalHotKey.cpp  juce_GlobalHotKey.h  juce_GlobalHotKeyManager.cpp  juce_GlobalHotKeyManager.h  juce_KeyCode.cpp  juce_KeyCode.h
modules_extra/juce_global_hotkeys/native/: juce_GlobalHotKey_linux.cpp  juce_GlobalHotKey_linux.h  juce_GlobalHotKey_mac.cpp  juce_GlobalHotKey_mac.h  juce_GlobalHotKey_mac.mm  juce_GlobalHotKey_windows.cpp  juce_GlobalHotKey_windows.h
